"Google": Replaced <xul:description> (which no longer seems to work) with <div>.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -19,7 +19,7 @@ corresponding feed is <a href="search.html">here</a>.</p>
   <div>
     ${result.key}: <a href="${result.unescapedUrl}" accesskey="${result.key}">${result.title}</a>
   </div>
-  <xul:description class="gresult-content">${result.content}</xul:description>
+  <div class="gresult-content">${result.content}</div>
   <div class="gresult-url">${result.visibleUrl}</div>
 </div>
 {/for}
