Got rid of search.html for redundancy.

--- a/ubiquity/standard-feeds/search.xhtml
+++ b/ubiquity/standard-feeds/search.xhtml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
-      xmlns:xul="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <title>Ubiquity Web Search Commands</title>
+  <link rel="commands" href="search.xhtml"/>
 </head>
 <style>
   div[id] {display: none}
   script {display: block; white-space: pre; font-family: monospace}
 </style>
 <body>
-<p>This xhtml source contains commands for searching the Web.  Its
-corresponding feed is <a href="search.html">here</a>.</p>
+<p>This XHTML feed contains commands for searching the Web.</p>
 
 <div id="google-search">
 {if results.length}
