standard-feeds/developer: Added "SkyWriter".

--- a/ubiquity/chrome/content/editor.xhtml
+++ b/ubiquity/chrome/content/editor.xhtml
@@ -66,8 +66,8 @@
   <br />
 
   <label for="usebespin">
-   <input type="checkbox" id="usebespin" accesskey="B"/>
-   Use <a href="http://mozillalabs.com/bespin/"><u>B</u>espin</a>
+   <input type="checkbox" id="usebespin" accesskey="S"/>
+   Use <a href="http://mozillalabs.com/skywriter/"><u>S</u>kyWriter</a>
   </label>
 
   <br clear="all" />
